@@ -1,5 +1,10 @@
 2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>
 
+	* tree/rewrite.py (promoteSelect, flattenSelect): New
+	simplification operations.
+
+2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>
+
 	* tree/rewrite.py (remakeExpr, treeMatchApply.operationWrapper) 
 	(flattenAssoc.operation): Factor expression rebuild.
 
